--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,6 @@
   border: none;
   font-size: 20px;
   font-weight: 700;
-
 }
 
 /* nav relatated style */
@@ -22,6 +21,8 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #fff8f3;
+  margin: 0 150px;
 }
 .nav-title {
   color: #181818;
@@ -42,3 +43,30 @@ nav a {
   text-decoration: none;
   color: #474747;
 }
+
+/* header related styles */
+.header {
+  background: #fff8f3;
+}
+.banner {
+  padding: 30px 30px 30px 150px;
+  display: flex;
+  align-items: center;
+}
+.contact-btn {
+  padding: 20px 35px;
+  border-radius: 5px;
+  background-color: #FFF8F3;
+  color: #fd6e0a;
+  border: #fd6e0a solid;
+  border-width: 1px;
+  margin-left: 20px;
+  font-size: 20px;
+  font-weight: 700;
+}
+.banner img{
+  width: 500px;
+  height: 600px;
+}
+
+
