--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,27 @@
   font-weight: 700;
 }
 
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding-bottom: 30px;
+}
+
+.section-description {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  padding-bottom: 30px;
+  align-items: center;
+}
+
 /* nav relatated style */
 nav {
   display: flex;
@@ -47,16 +68,14 @@ nav a {
 /* header related styles */
 .header {
   background: #fff8f3;
-}
-.banner {
-  padding: 30px 30px 30px 150px;
-  display: flex;
-  align-items: center;
+  background-image: url('../images/header_bg.png');
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
 .contact-btn {
   padding: 20px 35px;
   border-radius: 5px;
-  background-color: #FFF8F3;
+  background-color: #fff8f3;
   color: #fd6e0a;
   border: #fd6e0a solid;
   border-width: 1px;
@@ -64,9 +83,69 @@ nav a {
   font-size: 20px;
   font-weight: 700;
 }
-.banner img{
+.banner {
+  padding: 30px 30px 0px 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.banner img {
   width: 500px;
   height: 600px;
 }
+.banner-greeting {
+  color: #474747;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0px;
+}
+.banner-title {
+  color: #181818;
+  font-size: 85px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.banner-content p {
+  color: #757575;
+  font-size: 20px;
+  line-height: 30px;
+  font-weight: 400;
+  margin-bottom: 30px;
+}
 
+/* main section style */
+/* about section style */
+.about {
+  padding: 130px;
+  border-radius: 10px;
+  background: #fff8f3;
+  margin: 130px 150px 130px 150px;
+}
 
+.about-info-container {
+  display: flex;
+  justify-content: space-between;
+}
+.info-tile {
+  color: #757575;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 0px;
+}
+.info-description {
+  color: #474747;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  margin-top: 1px;
+}
