--- a/styles/style.css
+++ b/styles/style.css
@@ -149,3 +149,24 @@ nav a {
   line-height: 30px;
   margin-top: 1px;
 }
+
+/* what i do style */
+#what-i-do-description {
+  padding: 0px 200px;
+}
+
+/* skill section style */
+
+.skill-container {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 150px;
+}
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+
