--- a/styles/style.css
+++ b/styles/style.css
@@ -154,6 +154,9 @@ nav a {
 #what-i-do-description {
   padding: 0px 200px;
 }
+.what-i-do {
+  margin: 50px 0px;
+}
 
 /* skill section style */
 
@@ -167,6 +170,59 @@ nav a {
   border-radius: 5px;
   background: #fff;
   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  gap: 24px;
+}
+.skill-description {
+  color: var(--Dark-03, #757575);
+  font-family: Open Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
 }
 
+/* resume style */
+.resume{
+  margin-top: 100px;
+}
 
+.resume-container {
+  display: flex;
+}
+.resume-title {
+  color: var(--Dark-02, #474747);
+  font-family: Open Sans;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.title {
+  color: var(--Dark-02, #474747);
+  font-family: Open Sans;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.year {
+  color: var(--Dark-03, #757575);
+  font-family: Open Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.description {
+  color: var(--Dark-03, #757575);
+  font-family: Open Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 175% */
+  padding-right: 20px;
+}
+.resume-container{
+  margin: 30px 150px 30px 150px;
+  gap: 20px;
+}
