--- a/styles/style.css
+++ b/styles/style.css
@@ -224,5 +224,10 @@ nav a {
 }
 .resume-container{
   margin: 30px 150px 30px 150px;
-  gap: 20px;
+  gap: 50px;
+}
+.download-btn{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
